# ayab-esp32

./: .gitignore  CMakeLists.txt  README.md  notes.txt  partitions.csv  sdkconfig.defaults
components/app_config/: CMakeLists.txt  app_config.c
components/app_config/include/: app_config.h
components/ota/: CMakeLists.txt  ota_app.c  ota_handler.c  ota_littlefs.c  ota_spiffs.c
components/ota/include/: ota_app.h  ota_handler.h  ota_littlefs.h  ota_spiffs.h
components/ra4m1/: CMakeLists.txt  ra4m1_ctrl.c  ra4m1_flash.c  ra4m1_samba.c  ra4m1_uart.c
components/ra4m1/include/: ra4m1_ctrl.h  ra4m1_flash.h  ra4m1_samba.h  ra4m1_uart.h
components/services/: CMakeLists.txt  srv_file.c  srv_http.c  srv_littlefs.c  srv_mdns.c  srv_spiffs.c  srv_websocket.c  srv_wifi.c
components/services/include/: srv_file.h  srv_http.h  srv_littlefs.h  srv_mdns.h  srv_spiffs.h  srv_websocket.h  srv_wifi.h
data/www/: index.htm  script.js  style.css  upload.js  utils.js  websocket_api.js
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  ifce_wifi.c  main.c
main/include/: app_define.h  ifce_wifi.h
